<resources>
    <string name="app_name">趣刷</string>
    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">主页</string>
    <string name="live">直播</string>
    <string name="grow">成长</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="social">社交</string>
    <string name="captcha">动态码</string>
    <string name="userName">用户名</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="rePWD">重输</string>
    <string name="extra">第三方登录</string>
    <string name="qq">QQ</string>
    <string name="weChat">微信</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码</string>
    <string name="phone">手机号</string>
    <string name="please_input">请输入要翻译的文字…😄</string>
    <string name="translate_title">译文</string>
    <string name="detail_explain">详细译义</string>
    <string name="phrase_title">短语</string>
    <string name="like">喜欢</string>
    <string name="comment">评论</string>
    <string name="forward">转发</string>
    <string name="download">缓存</string>
    <string name="send">发送</string>
    <string name="people">人脉</string>
    <string name="publish">想法</string>
    <string name="mind_title">发布想法前要想个标题…</string>
    <string name="content_hint">分享一下您今日有何感想,不敢想也罢…</string>
    <string name="add_pic">加点图片吧</string>
    <string name="title_share">分享社区</string>
    <string name="no_publish">可怜的你连个好友都没有,也就加载不出动态了</string>
    <string name="send_capture">发送验证码</string>
    <string name="extension">拓展</string>
    <string name="movie">视频</string>
    <string name="note_hint">在这可以写一些容易忘记的事情😃</string>
    <string name="exit_login">退出登录</string>
    <string name="birthday">生日</string>
    <string name="userID">ID:000000</string>
    <string name="query_friend">查询好友</string>
    <string name="translate">翻译</string>
    <string name="send_message">发送消息</string>
    <string name="check_info">查看资料</string>
    <string name="chat_user">与%s聊天中</string>
    <string name="add_friend">添加好友</string>
    <string name="publish_mind">发布想法</string>
    <string name="say_hi">打招呼</string>
    <string name="like_me">喜欢我</string>
    <string name="temperature">%s℃"</string>
    <string name="add_city">添加城市</string>
</resources>
