<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/social">
        <menu>
            <item
                android:id="@+id/navPeople"
                android:icon="@drawable/ic_people"
                android:title="@string/people" />
            <item
                android:id="@+id/navPublish"
                android:icon="@drawable/ic_publish"
                android:title="@string/publish" />
            <item
                android:id="@+id/navShare"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navSetting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />
    </group>
</menu>
