<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.activity.sign.SignInActivity">

    <ImageView
        android:id="@+id/moreLogin"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_up" />

    <fun.brush.view.custom.RoundImage
        android:id="@+id/userIconPic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_user_default" />

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circle_corner_bg"
        android:drawableEnd="@drawable/ic_user"
        android:hint="@string/userName"
        android:imeOptions="actionSend"
        android:inputType="text"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textCursorDrawable="@null"
        tools:ignore="Autofill,LabelFor,RtlSymmetry" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circle_corner_bg"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/pwd"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textCursorDrawable="@null"
        tools:ignore="Autofill" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/corner_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>