<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.message.EditMindActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/WhiteButton"
        app:layout_constraintBottom_toTopOf="@+id/titleET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="@string/mind_title"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/mind_title"
        android:inputType="textPersonName"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/contentET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="@string/mind_title"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/content_hint"
        android:inputType="textMultiLine"
        android:textCursorDrawable="@null"
        android:textSize="14sp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleET"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:drawableStart="@drawable/ic_finger"
        android:drawableEnd="@drawable/ic_clear"
        android:gravity="center"
        android:text="@string/add_pic"
        app:layout_constraintBottom_toTopOf="@+id/choosePic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentET" />

    <ImageView
        android:id="@+id/choosePic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintVertical_weight="3"
        app:layout_constraintBottom_toTopOf="@+id/locationTxT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <TextView
        android:id="@+id/locationTxT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_my_location"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choosePic"
        tools:text="@tools:sample/cities" />
</androidx.constraintlayout.widget.ConstraintLayout>